--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,13 @@ img{
 .container{
     width: 1158px;
     padding: 0 15px;
-    margin: o auto;
+    margin: 0 auto;
 }
 
 .navbar{
     border-bottom: 1px solid #e7e9fc;
     background-color: #fff;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 
 }
 .header-container{
@@ -70,10 +71,7 @@ color: #2e2f42;
     align-items: center;
     gap: 40px;
 }
-.nav-menu-page .nav-menu:hover,
-.nav-menu-page .nav-menu:focus{
-    color: #404bbf;
-}
+
 .nav-menu{
 padding: 24px 0;
 display: block;
@@ -83,7 +81,20 @@ line-height: 24px;
 letter-spacing: 0.02em;
 color: #2e2f42;
 text-align: left;
-
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-menu.current{
+    position: relative;
+}
+.nav-menu.current::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
 }
 .contacts-line{
     margin-left: auto;
@@ -94,6 +105,7 @@ text-align: left;
     display: flex;
     align-items: center;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts{
     display: block;
@@ -104,19 +116,24 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+.nav-menu-page .nav-menu:hover,
+.nav-menu-page .nav-menu:focus,
 .contacts-line .contacts:hover,
-.contacts-line .contacts:focus{
+.contacts-line .contacts:focus,
+.nav-menu.current{
     color: #404bbf;
 }
 .main-page-hero{
 background-color: #2e2f42;
 padding: 188px 0;
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/peopleoffice.jpg");
+background-repeat: no-repeat;
+background-position: 50% 50%;
 }
 
-
 .hero-title{
-margin-left: auto;
-margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 max-width: 496px;
 margin-bottom: 48px;
 font-weight: 700;
