--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-menu-page .nav-menu:hover,
 .nav-menu-page .nav-menu:focus,
@@ -128,7 +129,8 @@ background-color: #2e2f42;
 padding: 188px 0;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/peopleoffice.jpg");
 background-repeat: no-repeat;
-background-position: 50% 50%;
+max-width: 1440px; 
+background-size: cover;
 }
 
 .hero-title{
@@ -164,6 +166,7 @@ letter-spacing: 0.04em;
 color: #fff;
 background: #4d5ae5;
 cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-page-hero .btn-hero:hover,
@@ -196,7 +199,16 @@ cursor: pointer;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
 }
-
+.icon{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd; 
+    border-radius: 4px; 
+    border: 1px solid #8e8f99; 
+    margin-bottom: 8px; 
+}
 
 .title-feature{
 margin-bottom: 8px;
@@ -237,7 +249,7 @@ text-transform: capitalize;
     width: calc((100% - 72px) / 4);
     border-radius: 0 0 4px 4px;
   background-color: #FFFFFF;
-
+box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-container{
@@ -262,7 +274,31 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
-
+.icon-list{
+    display: flex;
+    justify-content: center; 
+    gap: 24px;
+}
+.icon-line{
+    width: 40px;
+    height: 40px;
+}
+.icon-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex; 
+    align-items: center;
+    justify-content: center; 
+}
+.icon-link:hover,
+.icon-link:focus{
+    background-color: #404bbf;
+}
+.icon-social{
+    fill: #f4f4fd;
+}
 .portfolio-page{
     padding: 120px 0;
 }
@@ -284,8 +320,33 @@ color: #2e2f42;
     row-gap: 48px;
    
 }
+.portfolio-line-page:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .portfolio-line{
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.portfolio-line:hover{
+    transform: translateY(0%);
+}
+.icon-container{
+    position: relative; 
+    overflow: hidden;
+}
+.overflow{
+    position: absolute; 
+    top: 0; 
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em; 
+    color: #f4f4fd;
+    padding: 40px 32px; 
+    background-color: #4d5ae5; 
+    height: 100%;
+    width: 100%; 
+    transform: translateY(100%); 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .portfolio-img{
 background: url("path_to_image");
@@ -322,6 +383,7 @@ color: #434455;
     margin: auto;
     padding: 100px 0
     }
+    
 .footer-logo{
     display: inline-block; 
     margin-bottom: 16px;
