--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,7 @@ gap: 0px;
 
 .footer-line{
     align-items: space-between;
+    width:264px;
     margin-top: 16px;
 font-weight: 400;
 font-size: 16px;
